<resources>
    <string name="app_name">ACM</string>
    <string name="text_email">Email</string>
    <string name="text_password">password</string>
    <string name="text_login">LOGIN</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="text_logout">LOGOUT</string>
    <string name="find">Find</string>
    <string name="buy">Buy</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="personalize_options">Personalize options</string>
    <string name="send_me_notifications">Send me notifications</string>
    <string name="save_data_on_sd_card">Save data on SD card</string>
    <string name="_id">"ID:  "</string>
    <string name="register">Register</string>
</resources>