<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personalize_options"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_me_notifications"
        android:checked="true"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBoxOptionSaveONSDCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data_on_sd_card"
        android:checked="true"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBoxInstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Install update automaticilly"
        android:layout_marginBottom="16dp"/>
</LinearLayout>