<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_64dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgViewLogin"
        android:layout_width="@dimen/_200dp_image_view_user"
        android:layout_height="@dimen/_200dp_image_view_user"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_32dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginRight="@dimen/_32dp"
        android:background="@drawable/ic_launcher_foreground" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_32dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginRight="@dimen/_32dp">

        <EditText
            android:id="@+id/edtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_32dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginRight="@dimen/_32dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxKeepConnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/_32dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginRight="@dimen/_32dp"
        android:gravity="center"
        android:text="Keep me connected" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_32dp"
        android:background="@color/gray"
        android:text="@string/text_login"
        android:textColor="@color/black"
        style="@style/RaisedButton"/>
</LinearLayout>